--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
   }
 
   /* Media query for mobile devices */
- @media screen and (max-width: 768px) {
+ /* @media screen and (max-width: 768px) {
      #ireclogo{
     width: 50%;
     height:100%;
@@ -73,4 +73,4 @@
     border: 1px solid black;
   } 
 
-  }
+  } */
