--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,14 +6,24 @@ footer {
 }
 
 #main-nav {
-  border-bottom: 1px solid #ccc; /* Add a border bottom */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a light shadow */
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+#main-nav a {
+  color: inherit; 
+  text-decoration: none;
+}
+
+#main-nav a:hover {
+  text-decoration: underline;
+}
+
 
 #visualization {
   width: 100%;
   height: 0;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio (height/width) */
+  padding-bottom: 56.25%;
   position: relative;
 }
 
@@ -23,8 +33,8 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  scrollbar-width: thin; /* Set scrollbar width */
-  scrollbar-color: black; /* Set scrollbar colors */
+  scrollbar-width: thin;
+  scrollbar-color: black; 
   border: 1px solid black;
 }
 
@@ -38,10 +48,6 @@ footer {
   text-align: center;
 }
 
-/* #align-right {
-  text-align: right;
-} */
-
 [role="button"] {
   background-color: #af291d;
   margin-top: 10px;
@@ -50,6 +56,7 @@ footer {
 #nav-button {
   background-color: #af291d;
   padding: 7px;
+  margin-right: 2px;
 }
 
 .basictext {
@@ -79,6 +86,5 @@ footer {
     height: 100%;
     scrollbar-width: thin;
     scrollbar-color: black;
-    /* border: 1px solid black; */
   }
 }
